# tw-account

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
src/: __init__.py  __main__.py  config.py  main.py  models.py  smtp.py  sql.py
src/routes/: account.py  email.py
tests/: conftest.py  test_email.py
