[project]
name = "tw-account"
version = "0.1.0"
description = "一个账号系统"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=4.0.2",
    "alembic>=1.16.5",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.116.1",
    "platformdirs>=4.4.0",
    "psycopg>=3.2.10",
    "pyjwt[crypto]>=2.10.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.43",
]

[tool.setuptools.package-dir]
"tw_account" = "src"

[tool.ruff.lint]
select = [
    "I", # isort
]
